# danhawk

./: .gitignore  CHANGELOG.md  README.md  package.json
app/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: main.json
app/src-tauri/src/: main.rs
app/src-tauri/src/commands/: extension_commands.rs  mod.rs  mods_commands.rs  settings_commands.rs  tool_commands.rs  tools_commands.rs
app/src-tauri/src/core/: error.rs  logger.rs  mod.rs  paths.rs
app/src-tauri/src/engines/: mod.rs
app/src-tauri/src/engines/ahk/: mod.rs
app/src-tauri/src/engines/command/: mod.rs
app/src-tauri/src/engines/native/: mod.rs
app/src/components/: ExtensionSlots.tsx  QuickAccess.tsx  ToolSlots.tsx
app/src/components/danhawk/: ToolIcon.tsx  create-mod-button.tsx  create-tool-button.tsx  header.tsx  mod-card.tsx  tool-card.tsx
app/src/components/slot-renderers/: ShortcutManager.tsx  (+1 more)
app/src/context/: ToolModalContext.tsx
app/src/lib/: mods.ts  tools.ts  types.ts
app/src/pages/: About.tsx  Changelog.tsx  Create.tsx  Explore.tsx  Feedback.tsx  Home.tsx  ModDetail.tsx  Settings.tsx  ToolDetail.tsx  launcher.tsx
app/src/store/: mod-store.tsx  tool-store.tsx
app/src/styles/: globals.css
docs/: architecture.md
extensions-repo/lock-folder/: disable.ps1  enable.ps1  manifest.json  silent.vbs
extensions-repo/multikey-shortcuts/: manifest.json  shortcuts.ahk  shortcuts.json
extensions-repo/open-calculator/: manifest.json
(+1 files in other folders)
