[package]
name = "danhawk"
version = "1.0.0"
description = "Danhawk — Windows automation extension platform"
authors = ["Dan"]
edition = "2021"

[[bin]]
name = "danhawk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell  = "1"
ctrlc      = "3"
ureq       = { version = "2", features = ["json"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
